fixed horizontal scroll issue

--- a/frontend/src/Home/Home.module.css
+++ b/frontend/src/Home/Home.module.css
@@ -1,18 +1,20 @@
+
 .homeContainer {
     position: absolute;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     color: white;
     display: flex;
     z-index: 1;
+    overflow-x: hidden;
+    overflow-y: visible;
 }
-
 .videoContainer {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width:100%;
     height: 100%;
     overflow: hidden;
     z-index: -1;
@@ -29,6 +31,7 @@ video {
     z-index: 2;
     display: flex;
     flex-direction: column;
+    max-width: 100vw;
 }
 .logo{
     width: 50vh;
